--- a/src/css/Addpost.css
+++ b/src/css/Addpost.css
@@ -176,6 +176,12 @@
   position: fixed;
 }
 
+.NewPostAdd {
+  float: right;
+  margin: 13px 30px 0 0;
+  color: #00c3ff;
+}
+
 .TopLine {
   color: rgba(128, 128, 128, 0.5);
   width: 997px;
